--- a/app/gui/mainwindow.ui
+++ b/app/gui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>588</width>
-    <height>296</height>
+    <width>634</width>
+    <height>470</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,19 +18,116 @@
     <enum>Qt::LeftToRight</enum>
    </property>
   </widget>
+  <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionUndo"/>
+   <addaction name="actionNewLayer"/>
+   <addaction name="actionMakeLayer"/>
+   <addaction name="actionVisibility"/>
+   <addaction name="actionColor"/>
+  </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>588</width>
-     <height>25</height>
+     <width>634</width>
+     <height>20</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuEdit">
+    <property name="title">
+     <string>Edit</string>
+    </property>
+    <addaction name="actionUndo"/>
+   </widget>
+   <widget class="QMenu" name="menuLayer">
+    <property name="title">
+     <string>Layer</string>
+    </property>
+    <addaction name="actionNewLayer"/>
+    <addaction name="actionMakeLayer"/>
+    <addaction name="actionVisibility"/>
+    <addaction name="actionColor"/>
+   </widget>
+   <addaction name="menuEdit"/>
+   <addaction name="menuLayer"/>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionUndo">
+   <property name="icon">
+    <iconset resource="../res/icon.qrc">
+     <normaloff>:/icons/edit-undo.png</normaloff>:/icons/edit-undo.png</iconset>
+   </property>
+   <property name="text">
+    <string>Undo</string>
+   </property>
+   <property name="toolTip">
+    <string>Click to undo last action</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Z</string>
+   </property>
+  </action>
+  <action name="actionMakeLayer">
+   <property name="text">
+    <string>Make layer</string>
+   </property>
+   <property name="toolTip">
+    <string>Click to generate layer</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+M</string>
+   </property>
+  </action>
+  <action name="actionNewLayer">
+   <property name="text">
+    <string>New Layer</string>
+   </property>
+   <property name="toolTip">
+    <string>Click to start drawing a new layer</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
+   </property>
+  </action>
+  <action name="actionVisibility">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Visibility</string>
+   </property>
+   <property name="toolTip">
+    <string>Toggle visibility of current layer</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+.</string>
+   </property>
+  </action>
+  <action name="actionColor">
+   <property name="text">
+    <string>Color</string>
+   </property>
+   <property name="toolTip">
+    <string>Click to choose color</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+K</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="../res/icon.qrc"/>
+ </resources>
  <connections/>
 </ui>
