--- a/app/gui/mainwindow.ui
+++ b/app/gui/mainwindow.ui
@@ -32,6 +32,7 @@
    <addaction name="actionUndo"/>
    <addaction name="actionNewLayer"/>
    <addaction name="actionMakeLayer"/>
+   <addaction name="actionEditLayer"/>
    <addaction name="actionVisibility"/>
    <addaction name="actionColor"/>
   </widget>
@@ -41,7 +42,7 @@
      <x>0</x>
      <y>0</y>
      <width>634</width>
-     <height>20</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuEdit">
@@ -64,7 +65,7 @@
   </widget>
   <action name="actionUndo">
    <property name="icon">
-    <iconset resource="../res/icon.qrc">
+    <iconset>
      <normaloff>:/icons/edit-undo.png</normaloff>:/icons/edit-undo.png</iconset>
    </property>
    <property name="text">
@@ -79,7 +80,7 @@
   </action>
   <action name="actionMakeLayer">
    <property name="text">
-    <string>Make layer</string>
+    <string>Make Layer</string>
    </property>
    <property name="toolTip">
     <string>Click to generate layer</string>
@@ -124,10 +125,13 @@
     <string>Ctrl+K</string>
    </property>
   </action>
+  <action name="actionEditLayer">
+   <property name="text">
+    <string>Edit Layer</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources>
-  <include location="../res/icon.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
