--- a/app/gui/mainwindow.ui
+++ b/app/gui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>739</width>
-    <height>470</height>
+    <width>737</width>
+    <height>468</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -39,14 +39,15 @@
    <addaction name="actionColor"/>
    <addaction name="actionMakeRiver"/>
    <addaction name="actionMakeRidge"/>
+   <addaction name="actionSea"/>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>739</width>
-     <height>23</height>
+     <width>737</width>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuEdit">
@@ -161,6 +162,14 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
+   </property>
+  </action>
+  <action name="actionSea">
+   <property name="text">
+    <string>Sea level</string>
+   </property>
+   <property name="toolTip">
+    <string>Indicate sea level</string>
    </property>
   </action>
  </widget>
