save load again, moved images of features to basic concept

--- a/app/gui/mainwindow.ui
+++ b/app/gui/mainwindow.ui
@@ -41,17 +41,23 @@
    </property>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
-     <string>Edit</string>
+     <string>File</string>
     </property>
-   </widget>
-   <widget class="QMenu" name="menuLayer">
-    <property name="title">
-     <string>Layer</string>
-    </property>
+    <addaction name="actionSave"/>
+    <addaction name="actionLoad"/>
    </widget>
    <addaction name="menuEdit"/>
-   <addaction name="menuLayer"/>
   </widget>
+  <action name="actionSave">
+   <property name="text">
+    <string>Save</string>
+   </property>
+  </action>
+  <action name="actionLoad">
+   <property name="text">
+    <string>Load</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
